--- a/package.json
+++ b/package.json
@@ -10,14 +10,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-fileupload": "^1.2.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.19",
-    "peer": "^0.6.1",
-    "socket.io": "^3.1.2"
+    "@aws-sdk/client-s3": "^3.276.0",
+    "avataaars": "^2.0.0",
+    "aws-sdk": "^2.1320.0",
+    "axios": "^1.3.4",
+    "b64-lite": "^1.4.0",
+    "bad-words": "^3.0.4",
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.2",
+    "google-auth-library": "^8.7.0",
+    "jimp": "^0.3.5",
+    "joi": "^17.7.0",
+    "jsonwebtoken": "^9.0.0",
+    "jwks-rsa": "^3.0.1",
+    "mongoose": "^6.8.0",
+    "node-cache": "^5.1.2",
+    "nodemailer": "^6.8.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-jwt": "^4.0.0",
+    "sharp": "^0.31.3",
+    "unique-username-generator": "^1.1.3"
   }
 }
