--- a/.github/workflows/scan.yaml
+++ b/.github/workflows/scan.yaml
@@ -1,21 +1,11 @@
-name: Snyk Security Check
-
-on:
-  pull_request:
-    branches:
-      - main
-
+name: Example workflow using Snyk
+on: push
 jobs:
-  snyk:
+  security:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Install Snyk CLI
-        run: |
-          curl -L https://github.com/snyk/snyk/releases/download/v1.719.0/snyk-linux -o /usr/local/bin/snyk
-          chmod +x /usr/local/bin/snyk
-      - name: Run Snyk Security Check
-        run: snyk auth $SNYK_TOKEN && snyk test
+      - uses: actions/checkout@master
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@master
         env:
-          SNYK_TOKEN: ${{ secrets.SNYK_API_KEY }}
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
