--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -45,7 +45,9 @@ jobs:
         #- uses: actions/setup-node@v3
         #  with:
         #    node-version: 16
-
+      - name: Run Snyk Security Check
+        run: snyk auth $SNYK_TOKEN
+        
         env:
           # This is where you will need to introduce the Snyk API token created with your Snyk account
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
