--- a/.github/workflows/scan.yaml
+++ b/.github/workflows/scan.yaml
@@ -14,4 +14,4 @@ jobs:
         with:
           json: true
         env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+          SNYK_TOKEN: ${{ secrets.SNYK_API_KEY }}
