--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
-  "name": "mvp",
+  "name": "auth",
   "version": "1.0.0",
-  "description": "",
+  "description": "Authentication Service",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node index.js",
+    "test": "jest",
+    "build": "webpack",
+    "lint": "eslint \"**/*.js\"",
+    "lint:fix": "eslint \"**/*.js\" --fix",
+    "start": "node dist/app.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xymbia/auth.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/xymbia/auth/issues"
+  },
+  "homepage": "https://github.com/xymbia/auth#readme",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.276.0",
     "avataaars": "^2.0.0",
@@ -20,7 +33,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.2",
     "google-auth-library": "^8.7.0",
-    "jimp": "^0.3.5",
+    "jimp": "^0.3.11",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
     "jwks-rsa": "^3.0.1",
@@ -32,5 +45,12 @@
     "passport-jwt": "^4.0.0",
     "sharp": "^0.31.3",
     "unique-username-generator": "^1.1.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.40.0",
+    "eslint-config-google": "^0.14.0",
+    "jest": "^29.5.0",
+    "webpack": "^5.81.0",
+    "webpack-cli": "^5.0.2"
   }
 }
