--- a/.github/workflows/scan.yaml
+++ b/.github/workflows/scan.yaml
@@ -6,7 +6,7 @@ env:
   SNYK_TOKEN: ${{ secrets.SNYK_API_KEY }}
   
 jobs:
-  build:
+  security:
 
     runs-on: ubuntu-latest
 
@@ -27,8 +27,11 @@ jobs:
     - name: Snyk Auth
       run: snyk auth $SNYK_TOKEN
 
-    - name: Snyk security scan
+    - name: Snyk dependency scan
       run: snyk test
+
+    - name: Snyk code scan
+      run: snyk code test
 
     - name: Snyk monitor
       run: snyk monitor
