--- a/.github/workflows/sonarbuild.yaml
+++ b/.github/workflows/sonarbuild.yaml
@@ -15,6 +15,9 @@ jobs:
       with:
         # Disabling shallow clone is recommended for improving relevancy of reporting
         fetch-depth: 0
+    - name: directory
+      run: ls
+
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@master
       env:
