--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -33,5 +33,5 @@ jobs:
         sonar-scanner \
           -Dsonar.projectKey=auth \
           -Dsonar.sources=.
-          -Dsonar.host.url=http://localhost:9000 \
+          -Dsonar.host.url=http://172.17.0.2:9000 \
           -Dsonar.login=${{ env.SONAR_TOKEN }}
