--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=n-peer
 sonar.projectName=n-peer
 sonar.projectVersion=1
-sonar.sources=<path_to_your_source_code_directory>
-sonar.host.url=<your_sonarqube_url>
-sonar.login=<your_sonarqube_token>
+sonar.sources=.
+sonar.host.url=http://localhost:9000
+sonar.login=sqp_eacad1ef159ea425c07115b3504611f4dad5eca0
 sonar.language=js
