--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,6 @@ sonar.projectKey=n-peer
 sonar.projectName=n-peer
 sonar.projectVersion=1
 sonar.sources=.
-sonar.host.url=http://localhost:9000
-sonar.login=sqp_eacad1ef159ea425c07115b3504611f4dad5eca0
+sonar.host.url=http://af6ee10893135499e9bbfde42147b5e7-257213984.us-east-1.elb.amazonaws.com
+sonar.login=sqp_f75fd67806dbbc2b2f1413dcb7aed0889d32c26c
 sonar.language=js
