--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -1,4 +1,4 @@
-name: SonarQube Sucurity Scan
+name: SonarQube Security Scan
 
 on:
   pull_request:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   security:
-    name: Build
+
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
